KameProgressParser/ABLProgressParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Desenv\KameProgressScript\KameProgressParser\ABLProgress.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class ABLProgressParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		UNKNOWN_VALUE=1, QUESTION_MARK=2, VALID_SEPARATORS=3, KW_UNIQUE=4, KW_PRIMARY=5, 
		KW_INDEX_NUM=6, KW_INDEX_FIELD=7, KW_INDEX_SORT_ASC=8, KW_INDEX_SORT_DESC=9, 
		KW_ADD=10, KW_ALTER=11, KW_AREA=12, KW_AS=13, KW_CHAR=14, KW_CHARACTER=15, 
		KW_CLOB_CODEPAGE=16, KW_CLOB_COLLATION=17, KW_CLOB_TYPE=18, KW_CLOB=19, 
		KW_CYCLE_ON_LIMIT=20, KW_DATE=21, KW_DECIMAL=22, KW_DROP=23, KW_DUMP_NAME=24, 
		KW_FIELD_MISC13=25, KW_FIELD_MISC14=26, KW_FIELD_MISC15=27, KW_FIELD=28, 
		KW_FOREIGN_CODE=29, KW_FOREIGN_NAME=30, KW_FOREIGN_OWNER=31, KW_FOREIGN_POS=32, 
		KW_FOREIGN_TYPE=33, KW_FORMAT=34, KW_INCREMENT=35, KW_INDEX=36, KW_INITIAL=37, 
		KW_INTEGER=38, KW_LOGICAL=39, KW_MIN_VAL=40, KW_NO=41, KW_NUMBER=42, KW_OF=43, 
		KW_ON=44, KW_ORDER=45, KW_POSITION=46, KW_PROGRESS_RECID=47, KW_SEQUENCE=48, 
		KW_SHADOW_COL=49, KW_TABLE=50, KW_TYPE=51, KW_YES=52, COMMA=53, BACKSLASH=54, 
		DOLLAR=55, DOT=56, GREATER_THAN=57, HASH=58, INT=59, LESS_THAN=60, LETTER=61, 
		LOGICAL_VALUE=62, PARENTHESIS_CLOSE=63, PARENTHESIS_OPEN=64, SLASH=65, 
		STRING_DELIMITER=66, DASH=67, UNDERSCORE=68, WS=69;
	public const int
		RULE_script = 0, RULE_instruction = 1, RULE_action = 2, RULE_sequenceCycleOnLimitValue = 3, 
		RULE_sequenceIncrementValue = 4, RULE_sequenceInitialValue = 5, RULE_sequenceMinValue = 6, 
		RULE_sequenceForeignName = 7, RULE_sequenceForeigOwner = 8, RULE_sequenceObject = 9, 
		RULE_sequenceOptions = 10, RULE_indexObject = 11, RULE_indexOnValue = 12, 
		RULE_indexForeignNameValue = 13, RULE_indexNumValue = 14, RULE_indexFieldValue = 15, 
		RULE_indexFields = 16, RULE_indexOptions = 17, RULE_indexAreavalue = 18, 
		RULE_tableObject = 19, RULE_tableOptions = 20, RULE_tableAreaValue = 21, 
		RULE_tableDumpNameValue = 22, RULE_tableForeignNameValue = 23, RULE_tableForeignOwnerValue = 24, 
		RULE_tableProgressRecidValue = 25, RULE_tableType = 26, RULE_fieldObject = 27, 
		RULE_fieldDataTypeValue = 28, RULE_fieldForeignCodeValue = 29, RULE_fieldForeignNameValue = 30, 
		RULE_fieldForeignPosValue = 31, RULE_fieldFormatValue = 32, RULE_fieldInitialValue = 33, 
		RULE_fieldMisc13Value = 34, RULE_fieldMisc14Value = 35, RULE_fieldMisc15Value = 36, 
		RULE_fieldOfValue = 37, RULE_fieldClobCodePageValue = 38, RULE_fieldClobCollationValue = 39, 
		RULE_fieldClobTypeValue = 40, RULE_fieldOptions = 41, RULE_fieldOrderValue = 42, 
		RULE_fieldPositionValue = 43, RULE_fieldShadowColValue = 44, RULE_objectName = 45, 
		RULE_foreignTypeValues = 46, RULE_quotedString = 47, RULE_unquotedString = 48, 
		RULE_fieldFormatMask = 49, RULE_dataTypes = 50;
	public static readonly string[] ruleNames = {
		"script", "instruction", "action", "sequenceCycleOnLimitValue", "sequenceIncrementValue", 
		"sequenceInitialValue", "sequenceMinValue", "sequenceForeignName", "sequenceForeigOwner", 
		"sequenceObject", "sequenceOptions", "indexObject", "indexOnValue", "indexForeignNameValue", 
		"indexNumValue", "indexFieldValue", "indexFields", "indexOptions", "indexAreavalue", 
		"tableObject", "tableOptions", "tableAreaValue", "tableDumpNameValue", 
		"tableForeignNameValue", "tableForeignOwnerValue", "tableProgressRecidValue", 
		"tableType", "fieldObject", "fieldDataTypeValue", "fieldForeignCodeValue", 
		"fieldForeignNameValue", "fieldForeignPosValue", "fieldFormatValue", "fieldInitialValue", 
		"fieldMisc13Value", "fieldMisc14Value", "fieldMisc15Value", "fieldOfValue", 
		"fieldClobCodePageValue", "fieldClobCollationValue", "fieldClobTypeValue", 
		"fieldOptions", "fieldOrderValue", "fieldPositionValue", "fieldShadowColValue", 
		"objectName", "foreignTypeValues", "quotedString", "unquotedString", "fieldFormatMask", 
		"dataTypes"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'?'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "','", "'\\'", "'$'", "'\\.'", "'>'", "'#'", 
		null, "'<'", null, null, "')'", "'('", null, null, "'-'", "'_'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "UNKNOWN_VALUE", "QUESTION_MARK", "VALID_SEPARATORS", "KW_UNIQUE", 
		"KW_PRIMARY", "KW_INDEX_NUM", "KW_INDEX_FIELD", "KW_INDEX_SORT_ASC", "KW_INDEX_SORT_DESC", 
		"KW_ADD", "KW_ALTER", "KW_AREA", "KW_AS", "KW_CHAR", "KW_CHARACTER", "KW_CLOB_CODEPAGE", 
		"KW_CLOB_COLLATION", "KW_CLOB_TYPE", "KW_CLOB", "KW_CYCLE_ON_LIMIT", "KW_DATE", 
		"KW_DECIMAL", "KW_DROP", "KW_DUMP_NAME", "KW_FIELD_MISC13", "KW_FIELD_MISC14", 
		"KW_FIELD_MISC15", "KW_FIELD", "KW_FOREIGN_CODE", "KW_FOREIGN_NAME", "KW_FOREIGN_OWNER", 
		"KW_FOREIGN_POS", "KW_FOREIGN_TYPE", "KW_FORMAT", "KW_INCREMENT", "KW_INDEX", 
		"KW_INITIAL", "KW_INTEGER", "KW_LOGICAL", "KW_MIN_VAL", "KW_NO", "KW_NUMBER", 
		"KW_OF", "KW_ON", "KW_ORDER", "KW_POSITION", "KW_PROGRESS_RECID", "KW_SEQUENCE", 
		"KW_SHADOW_COL", "KW_TABLE", "KW_TYPE", "KW_YES", "COMMA", "BACKSLASH", 
		"DOLLAR", "DOT", "GREATER_THAN", "HASH", "INT", "LESS_THAN", "LETTER", 
		"LOGICAL_VALUE", "PARENTHESIS_CLOSE", "PARENTHESIS_OPEN", "SLASH", "STRING_DELIMITER", 
		"DASH", "UNDERSCORE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ABLProgress.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ABLProgressParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ABLProgressParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ABLProgressParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContext : ParserRuleContext {
		public InstructionContext[] instruction() {
			return GetRuleContexts<InstructionContext>();
		}
		public InstructionContext instruction(int i) {
			return GetRuleContext<InstructionContext>(i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterScript(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitScript(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ADD) | (1L << KW_ALTER) | (1L << KW_DROP))) != 0)) {
				{
				{
				State = 102; instruction();
				}
				}
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public SequenceObjectContext sequenceObject() {
			return GetRuleContext<SequenceObjectContext>(0);
		}
		public TableObjectContext tableObject() {
			return GetRuleContext<TableObjectContext>(0);
		}
		public FieldObjectContext fieldObject() {
			return GetRuleContext<FieldObjectContext>(0);
		}
		public IndexObjectContext indexObject() {
			return GetRuleContext<IndexObjectContext>(0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterInstruction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitInstruction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 2, RULE_instruction);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; action();
			State = 113;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KW_SEQUENCE:
				{
				State = 109; sequenceObject();
				}
				break;
			case KW_TABLE:
				{
				State = 110; tableObject();
				}
				break;
			case KW_FIELD:
				{
				State = 111; fieldObject();
				}
				break;
			case KW_INDEX:
				{
				State = 112; indexObject();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		public ITerminalNode KW_ADD() { return GetToken(ABLProgressParser.KW_ADD, 0); }
		public ITerminalNode KW_ALTER() { return GetToken(ABLProgressParser.KW_ALTER, 0); }
		public ITerminalNode KW_DROP() { return GetToken(ABLProgressParser.KW_DROP, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterAction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitAction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(Context, State);
		EnterRule(_localctx, 4, RULE_action);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ADD) | (1L << KW_ALTER) | (1L << KW_DROP))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceCycleOnLimitValueContext : ParserRuleContext {
		public ITerminalNode KW_YES() { return GetToken(ABLProgressParser.KW_YES, 0); }
		public ITerminalNode KW_NO() { return GetToken(ABLProgressParser.KW_NO, 0); }
		public SequenceCycleOnLimitValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequenceCycleOnLimitValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterSequenceCycleOnLimitValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitSequenceCycleOnLimitValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequenceCycleOnLimitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SequenceCycleOnLimitValueContext sequenceCycleOnLimitValue() {
		SequenceCycleOnLimitValueContext _localctx = new SequenceCycleOnLimitValueContext(Context, State);
		EnterRule(_localctx, 6, RULE_sequenceCycleOnLimitValue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			_la = TokenStream.LA(1);
			if ( !(_la==KW_NO || _la==KW_YES) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceIncrementValueContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(ABLProgressParser.INT, 0); }
		public SequenceIncrementValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequenceIncrementValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterSequenceIncrementValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitSequenceIncrementValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequenceIncrementValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SequenceIncrementValueContext sequenceIncrementValue() {
		SequenceIncrementValueContext _localctx = new SequenceIncrementValueContext(Context, State);
		EnterRule(_localctx, 8, RULE_sequenceIncrementValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceInitialValueContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(ABLProgressParser.INT, 0); }
		public SequenceInitialValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequenceInitialValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterSequenceInitialValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitSequenceInitialValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequenceInitialValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SequenceInitialValueContext sequenceInitialValue() {
		SequenceInitialValueContext _localctx = new SequenceInitialValueContext(Context, State);
		EnterRule(_localctx, 10, RULE_sequenceInitialValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceMinValueContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(ABLProgressParser.INT, 0); }
		public ITerminalNode UNKNOWN_VALUE() { return GetToken(ABLProgressParser.UNKNOWN_VALUE, 0); }
		public SequenceMinValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequenceMinValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterSequenceMinValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitSequenceMinValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequenceMinValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SequenceMinValueContext sequenceMinValue() {
		SequenceMinValueContext _localctx = new SequenceMinValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_sequenceMinValue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			_la = TokenStream.LA(1);
			if ( !(_la==UNKNOWN_VALUE || _la==INT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceForeignNameContext : ParserRuleContext {
		public UnquotedStringContext unquotedString() {
			return GetRuleContext<UnquotedStringContext>(0);
		}
		public ITerminalNode[] STRING_DELIMITER() { return GetTokens(ABLProgressParser.STRING_DELIMITER); }
		public ITerminalNode STRING_DELIMITER(int i) {
			return GetToken(ABLProgressParser.STRING_DELIMITER, i);
		}
		public SequenceForeignNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequenceForeignName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.EnterSequenceForeignName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IABLProgressListener typedListener = listener as IABLProgressListener;
			if (typedListener != null) typedListener.ExitSequenceForeignName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IABLProgressVisitor<TResult> typedVisitor = visitor as IABLProgressVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequenceForeignName(this);
			else return visitor.VisitChildren(this);
		}
	}
